# dqt-ui

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.ru.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: good_first_issues.md
.github/workflows/: docker.yml  lint.yml  publish.yml  test.yml
actions/dqt/: README.md  action.yml
deploy/: dqt.service  install.sh  nginx.conf
docs/: benchmark_metrics.md  benchmark_metrics.py  habr_article_draft.md  openapi.yaml
dqt/: __init__.py  api.py  cli.py  config.py  demo.py  io.py  plugins.py
dqt/app/: __init__.py  io.py  main.py  pipeline.py  rest.py  store.py
dqt/app/assets/: base.css
dqt/core/: __init__.py  autodetect.py  checks.py  grouping.py  quality.py  target_utils.py  time_utils.py
dqt/integrations/: __init__.py  airflow.py  dbt.py  mlflow.py
dqt/plots/: __init__.py  checks.py  distribution.py  target.py
dqt/report/: __init__.py  html_report.py
examples/: credit_lendingclub.py  fraud_ieee.py
tests/: conftest.py  test_api.py  test_app_smoke.py  test_checks.py  test_cli.py  test_config.py  test_demo.py  test_grouping.py  test_integrations_airflow.py  test_integrations_dbt.py  test_integrations_mlflow.py  test_io.py  test_pipeline.py  test_plugins.py  test_quality.py  test_rest.py  test_store.py  test_target_utils.py  test_time_utils.py
