[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqt"
version = "0.1.0"
description = "Data Quality Tool — interactive UI for assessing feature/target stability over time using tree-based binning."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gorevds" }]
dependencies = [
  "dash>=2.14,<3",
  "plotly>=5.18,<6",
  "pandas>=2.0,<3",
  "numpy>=1.24,<3",
  "scikit-learn>=1.3,<2",
  "scipy>=1.10,<2",
  "pyarrow>=14",
  "Jinja2>=3.1",
  "gunicorn>=21.2",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
dqt = "dqt.cli:main"

[tool.setuptools.packages.find]
include = ["dqt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::FutureWarning",
]
