[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqt"
version = "0.1.0"
description = "Data Quality Tool — interactive UI for assessing feature/target stability over time using tree-based binning."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gorevds" }]
dependencies = [
  "dash>=4.1.0,<5",
  "plotly>=6.7.0,<7",
  "pandas>=2.3.3,<3",
  "numpy>=2.0.2,<3",
  "scikit-learn>=1.6.1,<2",
  "scipy>=1.13.1,<2",
  "pyarrow>=21.0.0",
  "Jinja2>=3.1.6",
  "gunicorn>=23.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
]

[project.scripts]
dqt = "dqt.cli:main"

[tool.setuptools.packages.find]
include = ["dqt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::FutureWarning",
]

[tool.ruff]
line-length = 110
target-version = "py39"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
# E501 is line-length, handled by formatter; B008 mutable-default in Dash callbacks is fine
ignore = ["E501", "B008"]
per-file-ignores = { "tests/*" = ["E402"] }
