[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqt-ui"
version = "0.1.0"
description = "Scoring-style tree binning + PSI (numeric & categorical) + pairwise z-score bin stability over time, in an interactive UI. CLI for CI / cron."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gorevds" }]
keywords = [
  "data-quality", "data-drift", "psi", "binning", "scorecard",
  "monitoring", "dash", "plotly", "eda", "analytics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Office/Business :: Financial",
  "Framework :: Dash",
  "Typing :: Typed",
]
dependencies = [
  "dash>=2.14,<5",
  "plotly>=5.18,<7",
  "pandas>=2.0,<3",
  "numpy>=1.24,<3",
  "scikit-learn>=1.3,<2",
  "scipy>=1.10,<2",
  "pyarrow>=14",
  "Jinja2>=3.1",
  "gunicorn>=21.2",
]

[project.urls]
Homepage      = "https://dqt.gorev.space"
Documentation = "https://github.com/gorevds/dqt-ui#readme"
Repository    = "https://github.com/gorevds/dqt-ui"
Issues        = "https://github.com/gorevds/dqt-ui/issues"
Changelog     = "https://github.com/gorevds/dqt-ui/blob/main/CHANGELOG.md"
Demo          = "https://dqt.gorev.space"

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
dqt = "dqt.cli:main"

[tool.setuptools.packages.find]
include = ["dqt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::FutureWarning",
]

[tool.ruff]
line-length = 110
target-version = "py39"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
# E501 is line-length, handled by formatter; B008 mutable-default in Dash callbacks is fine
ignore = ["E501", "B008"]
per-file-ignores = { "tests/*" = ["E402"] }
